# obs_ata_generator

./: Dockerfile  LICENSE  README.md  app.py  atas.db  comDB_app.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  style.css  utils.py
.streamlit/: config.toml
